Fix light switch alignment

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,5 +1,7 @@
 .lightSwitch {
   margin-left: auto !important;
+  display: flex;
+  align-items: center;
 }
 
 .navbar {
